# vibe-fm

./: .gitignore  Cargo.toml  README.md  build.rs  generate_icon.py
src/: batch_rename_dialog.rs  bookmarks_bar.rs  drive_selector.rs  favorites.rs  file_entry.rs  file_manager.rs  file_ops.rs  file_panel.rs  file_properties_dialog.rs  file_viewer.rs  filter_bar.rs  function_bar.rs  main.rs  progress_dialog.rs  quick_filter_dialog.rs  rename_dialog.rs  search_dialog.rs  settings.rs  settings_dialog.rs  shell_context_menu.rs  status_bar.rs  toolbar.rs
tests/: file_operations_test.rs
