[package]
name = "vibe-fm"
version = "0.1.0"
edition = "2021"
description = "A modern dual-pane file manager built with Rust and GPUI"
authors = ["Vibe"]
build = "build.rs"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
anyhow = "1.0"
chrono = "0.4"
humansize = "2.1"
dirs = "5.0"
open = "5.0"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
winresource = "0.1"

[features]
default = []

[[bin]]
name = "vibe-fm"
path = "src/main.rs"
